fix spacing a bit

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -100,7 +100,7 @@ a {
     font-weight: 500;
     letter-spacing: .1em;
     text-transform: uppercase;
-    margin: 1em 0;
+    margin-top: 1em;
     min-width: 15em;
     transition: background 200ms, color 200ms, box-shadow 200ms;
 }
