--- a/src/css/desktop.scss
+++ b/src/css/desktop.scss
@@ -37,9 +37,6 @@
     .sekcja {
         padding: 5vmin 15vw;
 
-        & > * + * {
-            margin: 0 3em;
-        }
         img {
             align-self: flex-end;
             width: 50%;
@@ -48,13 +45,12 @@
 
     .column {
       width: 50%;
-      padding: 1em;
-
+      padding: 2em;
     }
 
     .contact-box {
         box-sizing: content-box;
-        padding: 2em;
+        padding: 3em;
         background-color: var(--gray);
     }
 }
